# comfy-quant-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml  taplo.toml
comfy-quant-api/: Cargo.toml
comfy-quant-api/config/: dev.toml
comfy-quant-api/examples/: store_klines.rs  workspace_path.rs
comfy-quant-api/src/: app_context.rs  helper.rs  lib.rs  main.rs  setting.rs
comfy-quant-api/src/data/: binance_history_klines.rs  mod.rs
comfy-quant-api/src/task/: binance_klines.rs  executor.rs  mod.rs  status.rs  traits.rs
comfy-quant-base/: Cargo.toml
comfy-quant-base/src/: lib.rs  utils.rs
comfy-quant-base/src/serde/: arc_rwlock.rs  mod.rs  vec_arc_rwlock.rs
comfy-quant-base/src/types/: exchange.rs  exchange_market_symbol_key.rs  exchange_symbol_key.rs  kline_interval.rs  market.rs  mod.rs  symbol.rs
comfy-quant-client/: Cargo.toml
comfy-quant-client/examples/: account_information.rs  binance_klines.rs  binance_spot_ticker_run.rs  get_klines.rs  history_klines.rs  into_kline.rs
comfy-quant-client/src/: behavior.rs  binance_spot_client.rs  lib.rs
comfy-quant-client/src/binance_client/: client.rs  futures.rs  spot.rs
comfy-quant-client/src/history_klines/: binance_history_klines.rs  mod.rs
comfy-quant-client/src/kline/: binance_kline.rs  mod.rs  utils.rs
comfy-quant-client/src/subscription/: binance_spot_ticker.rs  mod.rs
comfy-quant-config/: Cargo.toml
comfy-quant-config/src/: app_context.rs  lib.rs  setting.rs
comfy-quant-data/: Cargo.toml
comfy-quant-data/src/: kline.rs  lib.rs
comfy-quant-data/src/task/: binance_klines.rs
comfy-quant-database/: Cargo.toml
comfy-quant-database/examples/: decimal.rs
comfy-quant-database/src/: kline.rs  lib.rs  spot_pairs.rs  strategy_position.rs  strategy_spot_position.rs  strategy_spot_stats.rs  utils.rs
comfy-quant-database/src/task/: binance_klines.rs
comfy-quant-exchange/: Cargo.toml
comfy-quant-exchange/examples/: account_information.rs  binance_client.rs  binance_exchange_info.rs  binance_klines.rs  binance_spot_websocket.rs
comfy-quant-exchange/src/: binance_spot_client.rs  lib.rs
comfy-quant-exchange/src/account_client/: mod.rs
comfy-quant-exchange/src/account_client/spot_client/: base.rs  mock_spot_client.rs  mod.rs
comfy-quant-exchange/src/binance_client/: client.rs  spot.rs
comfy-quant-exchange/src/client/: client_error.rs  mod.rs  spot_client_kind.rs
comfy-quant-exchange/src/client/spot_client/: backtest_spot_client.rs  base.rs  binance_spot_client.rs  binance_spot_client_service.rs  mock_spot_client.rs  mod.rs
comfy-quant-exchange/src/exchange/binance/: client.rs  futures.rs  futures_websocket.rs  mod.rs  spot.rs  spot_websocket.rs
comfy-quant-exchange/src/kline_stream/: binance_kline.rs  mod.rs
comfy-quant-exchange/src/store/: mod.rs  price_store.rs
comfy-quant-exchange/src/subscription/: binance_spot_ticker.rs
comfy-quant-node/: Cargo.toml
comfy-quant-node/examples/: assigns.rs  binance_spot_ticker.rs  binance_spot_ticker_mock.rs  hdr.rs  new_node.rs  workflow_execute.rs  workflow_execute.rs.back
comfy-quant-node/src/: assigns.rs  data_ports.rs  lib.rs  node_kind.rs  utils.rs  workflow.rs
comfy-quant-node/src/account/: binance_account.rs  binance_spot_account.rs  binance_sub_account.rs  client_information.rs  mock_account.rs  mock_spot_account.rs  mod.rs
comfy-quant-node/src/base/: mod.rs  ports.rs  slot.rs  slots.rs  traits.rs
comfy-quant-node/src/base/traits/: mod.rs  node.rs  spot_order_client.rs
comfy-quant-node/src/client/spot_client/: mock.rs
comfy-quant-node/src/data/: account.rs  account_key.rs  backtest.rs  backtest_config.rs  crypto_exchange.rs  exchange_info.rs  mod.rs  tick.rs  tick_stream.rs  ticker.rs
comfy-quant-node/src/data_source/: binance_spot_ticker.rs  mod.rs  ticker.rs
comfy-quant-node/src/exchange/: binance_spot_ticker.rs  binance_spot_ticker_mock.rs  mod.rs
comfy-quant-node/src/manager/: account.rs
comfy-quant-node/src/node_core/: arc_rwlock_serde.rs  client_service.rs  exchange_keys.rs  exchange_rate.rs  exchange_symbol_key.rs  exchange_symbol_price_store.rs  mod.rs  node_context.rs  node_infra.rs  pair_price_store.rs  port.rs  slot.rs  slots.rs  spot_stats.rs  stats.rs  stats_data.rs  symbol_price_store.rs  tick.rs  traits.rs
comfy-quant-node/src/node_io/: log_kind.rs  mod.rs  spot_pair_info.rs  tick_stream.rs
comfy-quant-node/src/nodes/: mod.rs  node_kind.rs
comfy-quant-node/src/nodes/client/: backtest_spot_client.rs  binance_spot_client.rs  mod.rs  spot_client_mock.rs
comfy-quant-node/src/nodes/data/: backtest_spot_ticker.rs  binance_spot_ticker.rs  binance_spot_ticker_mock.rs  mod.rs
comfy-quant-node/src/nodes/strategy/: mod.rs  spot_grid.rs
comfy-quant-node/src/stats/: base_stats_data.rs  futures_stats_data.rs  mod.rs  spot_stats.rs  spot_stats_data.rs
comfy-quant-node/src/strategy/: mod.rs  spot_grid.rs
comfy-quant-node/src/traits/: mod.rs  node.rs
comfy-quant-node/src/types/: atomic_decimal.rs  mod.rs
comfy-quant-node/src/utils/: backtest.rs  mod.rs
comfy-quant-task/: Cargo.toml
comfy-quant-task/src/: binance_klines.rs  lib.rs  traits.rs
comfy-quant-task/src/task_core/: mod.rs  status.rs  traits.rs
comfy-quant-task/src/tasks/: binance_klines.rs  mod.rs
comfy-quant-util/: Cargo.toml
comfy-quant-util/src/: lib.rs
migrations/: 20240925123735_klines.down.sql  20240925123735_klines.sql  20240925123735_klines.up.sql  20240926031039_notify_kline_change.sql  20241121060118_strategy_positions.down.sql  20241121060118_strategy_positions.up.sql  20241121060118_strategy_spot_positions.down.sql  20241121060118_strategy_spot_positions.up.sql  20241122133332_strategy_spot_stats.down.sql  20241122133332_strategy_spot_stats.up.sql  20241219164153_spot_pairs.down.sql  20241219164153_spot_pairs.up.sql
