[package]
name = "comfy-quant-api"
version = "0.1.0"
authors = ["Jeff <fei.code@gmail.com>"]
edition = "2021"

[dependencies]
comfy-quant-exchange = { path = "../comfy-quant-exchange" }
comfy-quant-database = { path = "../comfy-quant-database" }
# comfy-quant-node = { path = "../comfy-quant-node" }
anyhow = { workspace = true }
bon = { workspace = true }
flume = { workspace = true }
tokio = { workspace = true }
async-lock = { workspace = true }
futures = { workspace = true }
sqlx = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
