[package]
name = "comfy-quant-api"
version = "0.1.0"
authors = ["Jeff <fei.code@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-lock = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true }
comfy-quant-database = { path = "../comfy-quant-database" }
comfy-quant-exchange = { path = "../comfy-quant-exchange" }
comfy-quant-node = { path = "../comfy-quant-node" }
flume = { workspace = true }
futures = { workspace = true }
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
rust_decimal = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { workspace = true }
