[package]
name = "comfy-quant-data"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
rust_decimal = { workspace = true, features = ["db-postgres"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "derive",
    "macros",
    "chrono",
    "rust_decimal",
    "json",
] }
