[package]
name = "comfy-quant-data"
version = "0.1.0"
edition = "2021"

[dependencies]
comfy-quant-client = { path = "../comfy-quant-client" }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
rust_decimal = { workspace = true, features = ["db-postgres"] }
sqlx = { workspace = true }
binance = { workspace = true }
futures = { workspace = true }
bon = { workspace = true }
flume = { workspace = true }
tokio = { workspace = true }
