[package]
name = "comfy-quant-database"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
binance = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
comfy-quant-exchange = { path = "../comfy-quant-exchange" }
flume = { workspace = true }
futures = { workspace = true }
rust_decimal = { workspace = true, features = ["db-postgres"] }
sqlx = { workspace = true }
tokio = { workspace = true }
