[package]
name = "comfy-quant-database"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
binance = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true }
comfy-quant-exchange = { path = "../comfy-quant-exchange" }
comfy-quant-util = { path = "../comfy-quant-util" }
flume = { workspace = true }
futures = { workspace = true }
rust_decimal = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
