[package]
name = "comfy-quant-database"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
binance = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true }
comfy-quant-base = { path = "../comfy-quant-base" }
comfy-quant-exchange = { path = "../comfy-quant-exchange" }
flume = { workspace = true }
futures = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
