[package]
name = "comfy-quant-exchange"
version = "0.1.0"
edition = "2021"

[dependencies]
enum_dispatch = { workspace = true }
binance = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
flume = { workspace = true }
bon = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
async-lock = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
