[package]
name = "comfy-quant-exchange"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-lock = { workspace = true }
async-stream = { workspace = true }
binance = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true }
comfy-quant-base = { path = "../comfy-quant-base" }
enum_dispatch = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
