[package]
name = "comfy-quant-node"
version = "0.1.0"
edition = "2021"

[dependencies]
comfy-quant-config = { path = "../comfy-quant-config" }
comfy-quant-database = { path = "../comfy-quant-database" }
comfy-quant-exchange = { path = "../comfy-quant-exchange" }
comfy-quant-task = { path = "../comfy-quant-task" }
anyhow = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
binance = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
bon = { workspace = true }
async-lock = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
flume = { workspace = true }
enum_dispatch = { workspace = true }
tokio-util = { workspace = true }
nanoid = "0.4.0"
rust_decimal = { workspace = true }
rust_decimal_macros = "1.36.0"

[dev-dependencies]
tracing-subscriber = { workspace = true }
