[package]
name = "comfy-quant-task"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true }
comfy-quant-base = { path = "../comfy-quant-base" }
comfy-quant-database = { path = "../comfy-quant-database" }
comfy-quant-exchange = { path = "../comfy-quant-exchange" }
flume = { workspace = true }
futures = { workspace = true }
rust_decimal = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
